refactor(tooling): Phase 4 - LiteralStack absorbs Parser's NonLiteralMarker
AsmKit.LiteralStack gains four new affordances driven by the
ToolingBlockEntities.Parser migration:
- pushNonLiteral() pushes a sentinel singleton (a Number subclass with zero
  values, so arithmetic sites that pop it silently get zero - matching the
  upstream Parser semantics)
- popIntOrZero(diag, contextPrefix, popSite) returns primitive int with
  - silent zero on empty stack
  - WARN + zero on the non-literal marker (contextualised "<entity-id> at
    <popSite>: non-literal argument consumed - ...")
  - WARN + zero on wrong type
  - coerce-via-Number.intValue() when top is a different Number subclass
- popFloatOrZero is the mirror for floats
- popNumber() returns the top as a typed Number (or null), feeding the
  Parser's arithmetic sites that previously did removeLast().intValue()
- removeFirst() exposes FIFO eviction the Parser uses for the overflow path

Parser side:
- numStack moves from ConcurrentList<Number> to AsmKit.LiteralStack with a
  named NUM_STACK_CAPACITY = 16
- All numStack.add(X) -> numStack.push(X), numStack.add(NON_LITERAL) ->
  numStack.pushNonLiteral()
- numStack.removeLast() arithmetic sites -> numStack.popNumber()
- numStack.removeLast() pure-discard sites -> numStack.pop()
- Auto-eviction on capacity overflow removes the manual size>16 + removeFirst
  pattern (overflow WARN preserved by checking size before push)
- popIntWithDiagnostics / popFloatWithDiagnostics collapse to one-line
  delegators over the AsmKit primitives
- Local NonLiteralMarker class + warnNonLiteral helper deleted (~75 lines)

AsmKitTest gains 9 new tests for the new methods (118 total, 0 failures).

Verification: compileJava test clean, blockEntities JSON byte-identical to
baseline.